--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "webpack": "^5.46.0",
     "webpack-cli": "^4.7.2",
     "typescript": "4.3.5",
     "ts-loader": "^9.2.3",
     "webpack-dev-server": "^3.11.2",
     "html-webpack-plugin": "^5.3.2",
-    "clean-webpack-plugin": "^3.0.0"
+    "clean-webpack-plugin": "^3.0.0",
+    "gl-matrix": "^3.3.0"
   }
 }
