--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "webpack-dev-server": "^3.11.2",
     "html-webpack-plugin": "^5.3.2",
     "clean-webpack-plugin": "^3.0.0",
-    "gl-matrix": "^3.3.0"
+    "gl-matrix": "^3.3.0",
+    "copy-webpack-plugin": "^9.0.1"
   }
 }
